--- a/readme
+++ b/readme
@@ -1,8 +1,14 @@
 
 1. 词法分析，已经完成。词法分析生成了一个单链表，存储了各个token的类型，值等。
 2. 语法分析，代码完成。验证了E,VL等几个规则。还需要进一步验证所有的规则。
-3. 输出结果的规范化，还未完成。
+3. st树构建。完成。
+4. rule计算，未完成。
 
 运行：
-查看词法分析的过程：
-./a.out -l hfile
+make
+
+./p2 -l test_file
+./p2 -ast test_file
+./p2 -st test_file
+
+make clean
